angler: update defconfig
Change-Id: I1ca00991576446ae2c760cfd83b4f8d97524dbd5
Signed-off-by: Roman Birg <roman@cyngn.com>

--- a/arch/arm64/configs/cyanogenmod_angler_defconfig
+++ b/arch/arm64/configs/cyanogenmod_angler_defconfig
@@ -302,9 +302,9 @@ CONFIG_HOTPLUG_CPU=y
 # CONFIG_PREEMPT_NONE is not set
 # CONFIG_PREEMPT_VOLUNTARY is not set
 CONFIG_PREEMPT=y
+CONFIG_HZ_300=y
 CONFIG_PREEMPT_COUNT=y
 CONFIG_SWP_EMULATE=y
-CONFIG_HZ=100
 CONFIG_ARCH_HAS_HOLES_MEMORYMODEL=y
 CONFIG_ARCH_SPARSEMEM_ENABLE=y
 CONFIG_ARCH_SPARSEMEM_DEFAULT=y
@@ -3050,7 +3050,6 @@ CONFIG_ONESHOT_SYNC=y
 CONFIG_ION=y
 # CONFIG_ION_TEST is not set
 CONFIG_ION_MSM=y
-CONFIG_ALLOC_BUFFERS_IN_4K_CHUNKS=y
 # CONFIG_FIQ_DEBUGGER is not set
 # CONFIG_FIQ_WATCHDOG is not set
 # CONFIG_USB_WPAN_HCD is not set
