--- a/arch/arm64/configs/cyanogenmod_angler_defconfig
+++ b/arch/arm64/configs/cyanogenmod_angler_defconfig
@@ -40,7 +40,7 @@ CONFIG_LOCALVERSION=""
 CONFIG_LOCALVERSION_AUTO=y
 CONFIG_DEFAULT_HOSTNAME="(none)"
 CONFIG_SWAP=y
-CONFIG_SYSVIPC_SYSCTL=y
+# CONFIG_SYSVIPC is not set
 # CONFIG_POSIX_MQUEUE is not set
 # CONFIG_FHANDLE is not set
 CONFIG_AUDIT=y
@@ -302,9 +302,14 @@ CONFIG_HOTPLUG_CPU=y
 # CONFIG_PREEMPT_NONE is not set
 # CONFIG_PREEMPT_VOLUNTARY is not set
 CONFIG_PREEMPT=y
-CONFIG_HZ_300=y
 CONFIG_PREEMPT_COUNT=y
 CONFIG_SWP_EMULATE=y
+# CONFIG_HZ_100 is not set
+# CONFIG_HZ_250 is not set
+CONFIG_HZ_300=y
+# CONFIG_HZ_1000 is not set
+CONFIG_HZ=300
+CONFIG_SCHED_HRTICK=y
 CONFIG_ARCH_HAS_HOLES_MEMORYMODEL=y
 CONFIG_ARCH_SPARSEMEM_ENABLE=y
 CONFIG_ARCH_SPARSEMEM_DEFAULT=y
@@ -373,7 +378,6 @@ CONFIG_BINFMT_SCRIPT=y
 # CONFIG_BINFMT_MISC is not set
 # CONFIG_COREDUMP is not set
 CONFIG_COMPAT=y
-CONFIG_SYSVIPC_COMPAT=y
 
 #
 # Power management options
@@ -3050,6 +3054,7 @@ CONFIG_ONESHOT_SYNC=y
 CONFIG_ION=y
 # CONFIG_ION_TEST is not set
 CONFIG_ION_MSM=y
+# CONFIG_ALLOC_BUFFERS_IN_4K_CHUNKS is not set
 # CONFIG_FIQ_DEBUGGER is not set
 # CONFIG_FIQ_WATCHDOG is not set
 # CONFIG_USB_WPAN_HCD is not set
