--- a/arch/arm64/configs/cyanogenmod_angler_defconfig
+++ b/arch/arm64/configs/cyanogenmod_angler_defconfig
@@ -2428,10 +2428,6 @@ CONFIG_SND_SOC_MSM_QDSP6V2_INTF=y
 # CONFIG_SND_SOC_QDSP6 is not set
 CONFIG_SND_SOC_QDSP6V2=y
 # CONFIG_AUDIO_OCMEM is not set
-# CONFIG_DOLBY_DAP is not set
-CONFIG_DTS_EAGLE=y
-CONFIG_DOLBY_DS2=y
-CONFIG_DTS_SRS_TM=y
 CONFIG_QTI_PP=y
 CONFIG_SND_SOC_CPE=y
 CONFIG_SND_SOC_MSM8994=y
@@ -3087,7 +3083,6 @@ CONFIG_MSM_AVTIMER=y
 CONFIG_PFT=y
 # CONFIG_MSM_SPSS is not set
 CONFIG_MSM_BUS_SCALING=y
-CONFIG_MSM_BUSPM_DEV=y
 CONFIG_BUS_TOPOLOGY_ADHOC=y
 CONFIG_DEBUG_BUS_VOTER=y
 # CONFIG_I2C_MSM_PROF_DBG is not set
@@ -3275,6 +3270,7 @@ CONFIG_FS_MBCACHE=y
 # CONFIG_NILFS2_FS is not set
 CONFIG_FS_POSIX_ACL=y
 CONFIG_FILE_LOCKING=y
+CONFIG_FS_ENCRYPTION=y
 CONFIG_FSNOTIFY=y
 CONFIG_DNOTIFY=y
 CONFIG_INOTIFY_USER=y
@@ -3346,7 +3342,14 @@ CONFIG_PSTORE_PMSG=y
 CONFIG_PSTORE_RAM=y
 # CONFIG_SYSV_FS is not set
 # CONFIG_UFS_FS is not set
-# CONFIG_F2FS_FS is not set
+CONFIG_F2FS_FS=y
+CONFIG_F2FS_STAT_FS=y
+CONFIG_F2FS_FS_XATTR=y
+CONFIG_F2FS_FS_POSIX_ACL=y
+CONFIG_F2FS_FS_SECURITY=y
+# CONFIG_F2FS_CHECK_FS is not set
+CONFIG_F2FS_FS_ENCRYPTION=y
+# CONFIG_F2FS_FAULT_INJECTION is not set
 # CONFIG_NETWORK_FILESYSTEMS is not set
 CONFIG_NLS=y
 CONFIG_NLS_DEFAULT="iso8859-1"
@@ -3622,7 +3625,7 @@ CONFIG_CRYPTO_XCBC=y
 # Digest
 #
 CONFIG_CRYPTO_CRC32C=y
-# CONFIG_CRYPTO_CRC32 is not set
+CONFIG_CRYPTO_CRC32=y
 # CONFIG_CRYPTO_GHASH is not set
 CONFIG_CRYPTO_MD4=y
 CONFIG_CRYPTO_MD5=y
