--- a/arch/arm64/configs/lineageos_angler_defconfig
+++ b/arch/arm64/configs/lineageos_angler_defconfig
@@ -3,6 +3,7 @@ CONFIG_NO_HZ=y
 CONFIG_HIGH_RES_TIMERS=y
 CONFIG_IRQ_TIME_ACCOUNTING=y
 CONFIG_RCU_FAST_NO_HZ=y
+CONFIG_RCU_BOOST=y
 CONFIG_LOG_BUF_SHIFT=20
 CONFIG_CGROUPS=y
 CONFIG_CGROUP_DEBUG=y
@@ -551,7 +552,6 @@ CONFIG_PWM=y
 CONFIG_PWM_QPNP=y
 CONFIG_SENSORS_SSC=y
 CONFIG_GENERIC_PHY=y
-CONFIG_CP_ACCESS64=y
 CONFIG_MSM_EVENT_TIMER=y
 CONFIG_MSM_IPC_ROUTER_SMD_XPRT=y
 CONFIG_MSM_QMI_INTERFACE=y
@@ -635,6 +635,7 @@ CONFIG_SECURITY_SELINUX=y
 CONFIG_CRYPTO_NULL=y
 CONFIG_CRYPTO_XCBC=y
 CONFIG_CRYPTO_MD4=y
+CONFIG_CRYPTO_SHA512=y
 CONFIG_CRYPTO_TWOFISH=y
 CONFIG_CRYPTO_DEV_QCRYPTO=y
 CONFIG_CRYPTO_DEV_QCE=y
