--- a/arch/arm64/configs/lineageos_angler_defconfig
+++ b/arch/arm64/configs/lineageos_angler_defconfig
@@ -592,6 +592,7 @@ CONFIG_MSM_SHARED_HEAP_ACCESS=y
 CONFIG_MSM_SYSTEM_HEALTH_MONITOR=y
 CONFIG_QCOM_EARLY_RANDOM=y
 CONFIG_MSM_PERFORMANCE=y
+CONFIG_MSM_CORE_CTL=y
 CONFIG_QCOM_NPA_DUMP=y
 CONFIG_MSM_TZ_LOG=y
 CONFIG_EXT4_FS=y
