[SQUASH] angler: update sdcardfs
Change-Id: I7151ec89aae4ec26582c37b97ee6e03f1a21e636

--- a/arch/arm64/configs/lineageos_angler_defconfig
+++ b/arch/arm64/configs/lineageos_angler_defconfig
@@ -595,6 +595,7 @@ CONFIG_QCOM_EARLY_RANDOM=y
 CONFIG_MSM_PERFORMANCE=y
 CONFIG_QCOM_NPA_DUMP=y
 CONFIG_MSM_TZ_LOG=y
+CONFIG_CONFIGFS_FS=y
 CONFIG_EXT4_FS=y
 CONFIG_EXT4_FS_SECURITY=y
 CONFIG_EXT4_FS_ENCRYPTION=y
