--- a/arch/arm64/configs/lineageos_angler_defconfig
+++ b/arch/arm64/configs/lineageos_angler_defconfig
@@ -592,6 +592,7 @@ CONFIG_EXT4_FS_SECURITY=y
 CONFIG_EXT4_FS_ENCRYPTION=y
 CONFIG_QUOTA=y
 # CONFIG_PRINT_QUOTA_WARNING is not set
+CONFIG_QFMT_V2=y
 CONFIG_FUSE_FS=y
 CONFIG_VFAT_FS=y
 CONFIG_TMPFS=y
