angler: early mount vendor in dts
Change-Id: Id4fe7af663feebf3de7f47e5e22286b17f33148c

--- a/arch/arm64/boot/dts/huawei/huawei-common.dtsi
+++ b/arch/arm64/boot/dts/huawei/huawei-common.dtsi
@@ -23,6 +23,22 @@
 			label = "ramoops_mem";
 		};
 	};
+
+	firmware {
+		android {
+			compatible = "android,firmware";
+			fstab {
+				compatible = "android,fstab";
+				vendor {
+					compatible = "android,vendor";
+					dev = "/dev/block/platform/soc.0/f9824900.sdhci/by-name/vendor";
+					type = "squashfs";
+					mnt_flags = "ro,barrier=1";
+					fsmgr_flags = "wait";
+				};
+			};
+		};
+	};
 };
 
 &soc {
